--- a/myBill.html
+++ b/myBill.html
@@ -70,9 +70,9 @@
 	</div>
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="js/weui-dialog.js"></script>
+	<script src="js/commons/weui-dialog.js"></script>
 	<script src="js/myBill.js"></script>
-	<script src="js/common.js"></script>
+	<script src="js/commons/common.js"></script>
 	<script>
 		$(document).ready(function() {
 			var mb = new myBill();
