--- a/powerOffNotice.html
+++ b/powerOffNotice.html
@@ -87,7 +87,7 @@
 	<script src="bower_components/dcloud-mui/dist/js/mui.min.js"></script>
 	<script src="bower_components/dcloud-mui/plugin/picker/js/mui.picker.js"></script>
 	<script src="bower_components/dcloud-mui/plugin/picker/js/mui.poppicker.js"></script>
-	<script src="js/cityData.js"></script>
+	<script src="js/commons/cityData.js"></script>
 	<script>
 		//选择近一天、近三天、近七天切换内容
 		$(function() { 
