--- a/myBill.html
+++ b/myBill.html
@@ -11,28 +11,28 @@
 	<!--我的账单-->
 	<div class="row-1 bh-userBaseInfo">
 		<div>
-			<p class="ellipsis">用户编号：1345678878</p>
-			<p class="ellipsis">户名：小明小明小明小明小明明</p>
+			<p class="ellipsis">用户编号：<span></span></p>
+			<p class="ellipsis">户名：<span></span></p>
 		</div>
 		<p>武汉市东湖新技术开发区</p>
 	</div>
 
 	<div class="row-2">
 		<div>
-			<p class="green-1">277.00千瓦时</p>
+			<p class="green-1"><span></span>千瓦时</p>
 			<p>本期用电</p>
 		</div>
 		<div>
-			<p class="green-1">277.00元</p>
+			<p class="green-1"><span></span>元</p>
 			<p>本期电费</p>
 		</div>
 	</div>
 
 	<div class="row-3 clearfix">
-		<p>本期用电时间：2016-10-01 至 2016-11-01</p>
+		<p>本期用电时间：<span></span> 至 <span></span></p>
 		<a class="weui-cell weui-cell_access" href="javascript:;">
             <div class="weui-cell__bd">
-                <p style="text-align: center;">您的<em class="red-1">10月</em>帐单未结清</p>
+                <p style="text-align: center;">您的<em class="red-1"></em>月帐单<span></span>结清</p>
             </div>
             <div class="weui-cell__ft orange-1">立即缴费</div>
         </a>
@@ -49,23 +49,7 @@
 					<th>档期电费（<em class="green-1">元</em>）</th>
 				</tr>
 			</thead>
-			<tbody>
-				<tr>
-					<td>201610</td>
-					<td>150.00</td>
-					<td>150.00</td>
-				</tr>
-				<tr>
-					<td>201610</td>
-					<td>150.00</td>
-					<td>150.00</td>
-				</tr>
-				<tr>
-					<td>201610</td>
-					<td>150.00</td>
-					<td>150.00</td>
-				</tr>
-			</tbody>
+			<tbody></tbody>
 		</table>
 	</div>
 
