--- a/placeQuery.html
+++ b/placeQuery.html
@@ -13,28 +13,30 @@
 		<div class="line-right">
 	        <label for="city" class="sr-only">请选择城市</label>
 	        <select name="city" id="city" class="bh-select">
-	        	<option value="0">请选择城市</option>
-	        	<option value="1">武汉市</option>
+	        	<option value="-1">请选择城市</option>
+	        	<!--<option value="1">武汉市</option>
 	            <option value="2">宜昌市</option>
 	            <option value="3">仙桃市</option>
-	            <option value="4">十堰市</option>
+	            <option value="4">十堰市</option>-->
 	        </select>
 	        <i class="bh-sj-bottom"></i>
 	    </div>
 	    <div class="">
 	        <label for="town" class="sr-only">选择区域</label>
 	        <select name="town" id="town" class="bh-select">
-	        	<option value="0">选择区域</option>
-	        	<option value="1">武汉市</option>
-	            <option value="2">宜昌市</option>
-	            <option value="3">仙桃市</option>
-	            <option value="4">十堰市</option>
+				<option value="-1">选择区域</option>
+				<!--<option value="1">市辖区</option>
+                <option value="2">江岸区</option>
+                <option value="3">江汉区</option>
+                <option value="4">硚口区</option>
+                <option value="5">汉阳区</option>
+                <option value="6">武昌区</option>-->
 	        </select>
 	        <i class="bh-sj-bottom"></i>
 	    </div>
     </div>
-	
-	<div class="addressList">
+	<div id="wdInfo">
+	<div class="addressList" >
 		<h6>1、国网供电营业厅<span>1.5km</span></h6>
 		<div class="detail line-bottom">
 			<p>湖北省武汉市洪山区新技术开发区（详细地址详细地址详细地址）</p>
@@ -61,7 +63,22 @@
 			<a href="javascript:;"><img src="img/6-3.png" alt="tu">电话</a>
 		</div>
 	</div>
-	
+	</div>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="js/commons/common.js"></script>
+	<script src="js/placeQuery.js"></script>
+	<script>
+
+		$(document).ready(function() {
+			var hose = new placeQuery();
+				hose.init();
+			$("#city").change(function() {
+				hose.allTown();
+			});
+				$("#city,#town").change(function(){
+				hose.checks();
+			});
+		});
+	</script>
 </body>
 </html>
