--- a/powerOffNotice.html
+++ b/powerOffNotice.html
@@ -41,7 +41,7 @@
 	                <p class="content">停电范围：<span>武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区</span></p>
 	            </div>
 	            <div class="weui-cell more">
-	                <p class="content">停电原因： <span>武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区</span></p>
+	                <p class="content">停电线路： <span>武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区</span></p>
 	            </div>
 	        </div>
 	    </div>
@@ -64,7 +64,7 @@
 	                <p class="content">停电范围：<span>武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区</span></p>
 	            </div>
 	            <div class="weui-cell more hide">
-	                <p class="content">停电原因： <span>武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区</span></p>
+	                <p class="content">停电线路： <span>武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区、武汉市洪山区</span></p>
 	            </div>
 	        </div>
 	    </div>
@@ -81,33 +81,41 @@
 	    	7天的内容略...
 	    </div>
 	</div>
-    
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/dcloud-mui/dist/js/mui.min.js"></script>
 	<script src="bower_components/dcloud-mui/plugin/picker/js/mui.picker.js"></script>
 	<script src="bower_components/dcloud-mui/plugin/picker/js/mui.poppicker.js"></script>
 	<script src="js/commons/cityData.js"></script>
+	<script src="js/commons/common.js"></script>
+	<script src="js/powerOffNotice.js"></script>
 	<script>
-		//选择近一天、近三天、近七天切换内容
-		$(function() { 
+		$(document).ready(function() {
+			var off = new powerOffNotice();
+			off.init("0");
+			//选择近一天、近三天、近七天切换内容
 			var $powerOffInfo = $('.powerOffInfo');
-			$('#daySelect').on('click', 'a', function() { 
+			$('#daySelect').on('click', 'a', function () {
 				var index = $(this).index(),
-					$willShowed = $powerOffInfo.eq(index);
+						$willShowed = $powerOffInfo.eq(index);
 				$(this).addClass('active').siblings().removeClass('active');
 				$willShowed.fadeIn(100);
 				$powerOffInfo.not($willShowed).hide();
+				var off = new powerOffNotice();
+				off.init(index);
+
 			});
 
-			$('.toggleMore').on('click', function() { 
-				$(this).siblings('.more').fadeToggle(100);
-				$(this).find('.arrow').toggleClass('arrow-up arrow-down');
-			});
 		});
+		//点击时间将详细内容缩进
+		function test(e) {
+			$(e).siblings('.more').fadeToggle(100);
+			$(e).find('.arrow').toggleClass('arrow-up arrow-down');
+
+		};
 
 		//地址级联选择
-		$(function() { 
+		$(function() {
 			mui.init();
 			mui.ready(function() {
 				var cityPicker = new mui.PopPicker({
@@ -127,6 +135,7 @@
 				}, false);
 			});
 		});
+
 	</script>
 </body>
 </html>
